Стили для первой страницы

--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Исследование экосистем веб-языков и веб-технологий</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Лабораторные работы</h1>
-    <ol>
-        <li>
-            <p>Лабораторная работа</p>
-            <ul>
-                <li><a href="./labs/lab01/task01/math.xml" target="_blank">Преобразование в MathMl</a></li>
-                <li><a href="./labs/lab01/task02/svg.xml" target="_blank">Преобразование в Svg</a></li>
-            </ul>
-        </li>
-    </ol>
+    <main class="col-lg-6 mx-auto p-4 py-md-5">
+        <h1 class="p-2">Арсений Беляев, P4107</h1>
+        <h3 class="p-2">Лабораторная работа №1</h3>
+        <div class="col-sm-12 mb-3 mb-sm-0">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Задание 1</h5>
+                    <p class="card-text">
+                        Необходимо написать XSLT-стили, которые преобразуют поддерево в поддерево элемента
+                        math с его последующей обработкой по технологии MathJax
+                    </p>
+                    <a href="./labs/lab01/task01/math.xml" class="btn btn-primary" target="_blank">Перейти</a>
+                    <a href="https://github.com/arsb29/ecosystems-of-web-languages/tree/master/labs/lab01/task01" class="btn btn-primary" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 mb-3 mb-sm-0">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Задание 2</h5>
+                    <p class="card-text">
+                        Необходимо создать XSLT-преобразование в SVG
+                    </p>
+                    <a href="./labs/lab01/task02/svg.xml" class="btn btn-primary" target="_blank">Перейти</a>
+                    <a href="https://github.com/arsb29/ecosystems-of-web-languages/tree/master/labs/lab01/task02" class="btn btn-primary" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
