--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Задание 1</h5>
                     <p class="card-text">
-                        Необходимо написать XSLT-стили, которые преобразуют поддерево в поддерево элемента
-                        math с его последующей обработкой по технологии MathJax
+                        Необходимо написать XSLT-стили, которые преобразуют поддерево в Math
                     </p>
                     <a href="./labs/lab01/task01/math.xml" class="btn btn-primary" target="_blank">Перейти</a>
                     <a href="https://github.com/arsb29/ecosystems-of-web-languages/tree/master/labs/lab01/task01" class="btn btn-primary" target="_blank">GitHub</a>
