--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main class="col-lg-6 mx-auto p-4 py-md-5">
-        <h1 class="p-2">Арсений Беляев, P4107</h1>
-        <h3 class="p-2">Лабораторная работа №1</h3>
+        <h4 id="author" title="GossJS" class="p-2">Арсений Беляев, P4107</h4>
+        <h5 class="p-2">Лабораторная работа №1</h5>
         <div class="col-sm-12 mb-3 mb-sm-0">
             <div class="card mb-3">
                 <div class="card-body">
