--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="col-lg-6 mx-auto p-4 py-md-5">
-        <h1 class="p-2">Арсений Беляев, P4107</h1>
+        <h4 id="author" title="GossJS" class="fs-1 p-2">Арсений Беляев</h4>
         <h3 class="p-2">Лабораторная работа №1</h3>
         <div class="col-sm-12 mb-3 mb-sm-0">
             <div class="card mb-3">
